--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,14 +65,14 @@ services:
 #      ELASTIC_APM_SERVICE_NAME: "attendance"
 #      ELASTIC_APM_SERVER_URL: "http://apm-server:8200"
       ELASTIC_APM_ENABLED: "false"
-      OTEL_EXPORTER_OTLP_ENDPOINT: "http://10.10.0.4:4317"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector:4317"
       OTEL_SERVICE_NAME: "attendance"
       OTEL_TRACES_EXPORTER: otlp
       OTEL_LOGS_EXPORTER: none
       OTEL_METRICS_EXPORTER: otlp
       OTEL_EXPORTER_OTLP_TRACES_PROTOCOL: grpc
-      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://10.10.0.4:4317"
-      OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://10.10.0.4:4317"
+      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://otel-collector:4317"
+      OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://otel-collector:4317"
       OTEL_EXPORTER_OTLP_METRICS_PROTOCOL: grpc
     networks:
       - ot-microservices
@@ -86,14 +86,14 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.empms-salary.rule=Host(`ot-microservices.opstree.com`) && PathPrefix(`/salary/`)"
     environment:
-      OTEL_EXPORTER_OTLP_ENDPOINT: "http://10.10.0.4:4317"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector:4317"
       OTEL_SERVICE_NAME: "salary"
       OTEL_TRACES_EXPORTER: otlp
       OTEL_LOGS_EXPORTER: none
       OTEL_METRICS_EXPORTER: otlp
       OTEL_EXPORTER_OTLP_TRACES_PROTOCOL: grpc
-      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://10.10.0.4:4317"
-      OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://10.10.0.4:4317"
+      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://otel-collector:4317"
+      OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://otel-collector:4317"
       OTEL_EXPORTER_OTLP_METRICS_PROTOCOL: grpc
 #      ELASTIC_APM_SERVICE_NAME: "salary"
 #      ELASTIC_APM_SERVER_URL: "http://apm-server:8200"
@@ -118,14 +118,14 @@ services:
         target: /app/config.yaml
         read_only: true
     environment:
-      OTEL_EXPORTER_OTLP_ENDPOINT: "http://10.10.0.4:4317"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector:4317"
       OTEL_SERVICE_NAME: "employee"
       OTEL_TRACES_EXPORTER: otlp
       OTEL_LOGS_EXPORTER: none
       OTEL_METRICS_EXPORTER: otlp
       OTEL_EXPORTER_OTLP_TRACES_PROTOCOL: grpc
-      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://10.10.0.4:4317"
-      OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://10.10.0.4:4317"
+      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://otel-collector:4317"
+      OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://otel-collector:4317"
       OTEL_EXPORTER_OTLP_METRICS_PROTOCOL: grpc
       CONFIG_FILE: "/app/config.yaml"
 #      ELASTIC_APM_SERVICE_NAME: "employee"
@@ -147,14 +147,14 @@ services:
       - ot-microservices
     environment:
       NODE_OPTIONS: "--require @opentelemetry/auto-instrumentations-node/register"
-      OTEL_EXPORTER_OTLP_ENDPOINT: "http://10.10.0.4:4317"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector:4317"
       OTEL_SERVICE_NAME: "frontend"
       OTEL_TRACES_EXPORTER: otlp
       OTEL_LOGS_EXPORTER: none
       OTEL_METRICS_EXPORTER: otlp
       OTEL_EXPORTER_OTLP_TRACES_PROTOCOL: grpc
-      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://10.10.0.4:4317"
-      OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://10.10.0.4:4317"
+      OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://otel-collector:4317"
+      OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "http://otel-collector:4317"
       OTEL_EXPORTER_OTLP_METRICS_PROTOCOL: grpc
 
   empms-traefik:
@@ -182,6 +182,10 @@ services:
     command: [ "--config=/etc/otel-collector.yaml" ]
     volumes:
       - ./otel-collector.yaml:/etc/otel-collector.yaml
+    networks:
+      - ot-microservices
+    ports:
+      - "4317"
 
   # To eventually offload to Tempo...
   tempo:
@@ -196,6 +200,8 @@ services:
       - "4317"  # otlp grpc
       - "4318"  # otlp http
       - "9411"   # zipkin
+    networks:
+      - ot-microservices
 
   prometheus:
     image: prom/prometheus:latest
@@ -207,6 +213,8 @@ services:
       - ./shared/prometheus.yaml:/etc/prometheus.yaml
     ports:
       - "9090:9090"
+    networks:
+      - ot-microservices
 
   grafana:
     image: grafana/grafana:10.4.2
@@ -219,6 +227,8 @@ services:
       - GF_FEATURE_TOGGLES_ENABLE=traceqlEditor
     ports:
       - "3000:3000"
+    networks:
+      - ot-microservices
 
 networks:
   ot-microservices:
