--- a/salary/Dockerfile
+++ b/salary/Dockerfile
@@ -11,6 +11,8 @@ USER root
 RUN apk update && \
     apk add openjdk17
 
+RUN curl -L -o /app/opentelemetry-javaagent.jar https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar
+
 COPY opentelemetry-javaagent.jar /app/opentelemetry-javaagent.jar
 ENV JAVA_TOOL_OPTIONS="-javaagent:/app/opentelemetry-javaagent.jar"
 
